--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,16 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-/* reset */
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    font-size: 10
 }
 
 body {
