--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/card";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/bg-video";
 
 @import "layout/grid";
 @import "layout/header";
