--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -54,6 +54,7 @@
     &__link {
         &:link,
         &:visited {
+            display: inline-block;
             font-size: 3rem;
             font-weight: 300;
             padding: 1rem 2rem;
@@ -63,6 +64,12 @@
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
             background-size: 220%;
             transition: all .4s;
+
+            span {
+                margin-right: 1.5rem;
+                display: inline-block;
+
+            }
         }
 
         &:hover,
